ortho_config/tests/ui/invalid_merge_strategy.stderr
error: unknown merge_strategy
 --> tests/ui/invalid_merge_strategy.rs:6:37
  |
6 |     #[ortho_config(merge_strategy = "bogus")]
  |                                     ^^^^^^^
