ortho_config/tests/ui/invalid_merge_strategy.rs
//! Test case exercising an invalid merge strategy.

use ortho_config::OrthoConfig;
use serde::Deserialize;

#[derive(Deserialize, OrthoConfig)]
struct Bad {
    #[ortho_config(merge_strategy = "bogus")]
    values: Vec<String>,
}

fn main() {}
